# t-logger

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  logger.rs  prelude.rs  styling.rs
src/opts/: customize.rs  mod.rs
src/opts/messages/: boxed.rs  mod.rs  single.rs
src/tests/: mod.rs
