[package]
name = "tlogger"
version = "0.1.0"
edition = "2021"
authors = ["Toast <ThatOneToast@proton.me>"]
description = "A simple logging library with a neat style."
repository = "https://github.com/ThatOneToast/t-logger"
license = "MIT"
keywords = ["log", "logging", "toast", "logger", "tlog"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
homepage = "https://github.com/ThatOneToast/t-logger"

[lib]
name = "tlogger"
path = "src/lib.rs"


[dependencies]
chrono = "0.4.38"
regex = "1.11.1"
